package com.asi2.backendmarket.repository;

import org.springframework.data.repository.CrudRepository;

import com.asi2.backendmarket.model.CardReference;

public interface CardRefRepository extends CrudRepository<CardReference, Integer> {

}